src/index.css
a {
  font-weight: 500;
  color: #036048;
  text-decoration: inherit;
}
/* a:hover {
  color: #138ACE;
} */

body {
  margin: 0;
  padding: 0;
  display: flex;
  color: #381300;
  font-size: 14px;
  background-color: #F1F1E9;
  font-family: "Quicksand", sans-serif;
  line-height: 1.5;
  font-weight: 500;
}

h1 {
  font-size: 32px;
  font-weight: 900;
}

h2 {
  font-size: 32px; 
  font-weight: 900;
}

h3 {
  font-size: 16px;
  font-weight: 900;
}

.text-box {
    padding: 12px 18px; 
    margin: 0; 
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

input {
  width: 85vw;
  height: 28px; 
  border-radius: 8.43px;
  border: none; 
  padding: 4px 8px 6px 8px; 
  font-size: 20px; 
  font-family: "Quicksand", sans-serif;
}

input:focus{
  outline: none;
}




@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

